--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         </header>
         <section class="main">
             <p class="formBox">
-                <label for="digits">Number of Digits</label>
+                <label class="size" for="digits">Number of Digits</label>
                 <input id="digits" type="number" max="10" min="1" placeholder="6" class="sm" />
             </p>
             <p class="formBox">
-                <label for="max">Range</label>
-                <span>1 to </span><input id="max" type="number" min="2" max="99" placeholder="49" class="sm" />
+                <label class="size" for="max">Range</label>
+                <span class="size">1 to </span><input id="max" type="number" min="2" max="99" placeholder="49" class="sm" />
             </p>
             <p class="formBox buttons">
                 <button id="btnSend">Generate Numbers</button>
             </p>
         </section>
     </div>
-    <div id="list" class="page">
+    <div id="list" class="page tran">
         <header>
             <h1>Lotto Numbers</h1>
         </header>
