--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="home" class="page active">
         <header>
-            <h1>Lotto Numbers</h1>
+            <h1 class="lot">Lotto Numbers</h1>
         </header>
         <section class="main">
             <p class="formBox">
@@ -26,7 +26,7 @@
     </div>
     <div id="list" class="page tran">
         <header>
-            <h1>Lotto Numbers</h1>
+            <h1 class="lot">Lotto Numbers</h1>
         </header>
         <section class="main">
             <ul class="num_list">
