--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/main.css" />
 </head>
 <body>
+   <div class="wrapper">
     <div id="home" class="page active">
         <header>
             <h1 class="lot">Lotto Numbers</h1>
@@ -24,7 +25,7 @@
             </p>
         </section>
     </div>
-    <div id="list" class="page tran">
+    <div id="list" class="page">
         <header>
             <h1 class="lot">Lotto Numbers</h1>
         </header>
@@ -38,5 +39,6 @@
         </section>
     </div>
     <script src="JS/main.js"></script>
+    </div>
 </body>
 </html>
