--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
         </section>
     </div>
-    <div id="list" class="page">
+    <div id="list" class="page tran">
         <header>
             <h1 class="lot">Lotto Numbers</h1>
         </header>
